--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/dover.cadiahealthcare-07-22/">https://rank-fortress-digital-agency.github.io/dover.cadiahealthcare-07-22/</a><br>
-                <a target="_bLank" href="http://dover.cadiahealthcare-07-22.s3-website.ap-south-1.amazonaws.com">http://dover.cadiahealthcare-07-22.s3-website.ap-south-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://heartfelt-entremet-a3d403.netlify.app/">https://heartfelt-entremet-a3d403.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/dover.cadiahealthcare-08-22/">https://rank-fortress-digital-agency.github.io/dover.cadiahealthcare-08-22/</a><br>
+                <a target="_bLank" href="http://dover.cadiahealthcare-08-22.s3-website-us-east-1.amazonaws.com">http://dover.cadiahealthcare-08-22.s3-website-us-east-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://jolly-beijinho-633c5e.netlify.app">https://jolly-beijinho-633c5e.netlify.app</a><br>
                 <a target="_bLank" href="https://sites.google.com/view/dover-cadiahealthcare/">https://sites.google.com/view/dover-cadiahealthcare/</a><br>
             </section>
 
